cilium/lf-webinar/resources/helloworld-authpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: helloworld
  namespace: default
spec:
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/default/sa/sleep
    to:
    - operation:
        paths:
        - /hello*
        ports:
        - "5000"
  selector:
    matchLabels:
      app: helloworld
