cilium/lf-webinar/resources/l3-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: helloworld-cnp
  namespace: default
spec:
  description: "Allow the productpage service to communicate with the reviews service"
  endpointSelector:
    matchLabels:
      app: helloworld
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: sleep
        k8s:io.kubernetes.pod.namespace: default
    toPorts:
    - ports:
      - port: "5000"
        protocol: TCP
