cilium/lf-webinar/resources/nwpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: helloworld-nwp
spec:
  podSelector:
    matchLabels:
      app: helloworld
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              proj: lf-demo
